--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "laravel/sanctum": "^2.8",
         "laravel/tinker": "^2.5",
         "league/flysystem-aws-s3-v3": "^1.0",
-        "maatwebsite/excel": "^3.1"
+        "maatwebsite/excel": "^3.1",
+        "phpoffice/phpspreadsheet": "1.21.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
